force-app/main/default/objects/Contracted_Users__c/Contracted_Users__c.object-meta.xml
<CustomObject>
    <label>Contracted User</label>
    <nameField>
        <label>Contracted Users Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracted Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>